<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preferences">
        <EditTextPreference
            android:key="@string/preference_key_skipped_pixels"
            android:title="@string/preference_title_skipped_pixels"
            android:summary="@string/preference_summary_skipped_pixels"
            android:dialogTitle="@string/preference_dialog_skipped_pixels"
            android:defaultValue="@string/preference_default_value_skipped_pixels"
            android:inputType="number"/>
        <EditTextPreference
            android:key="@string/preference_key_research_area"
            android:title="@string/preference_title_research_area"
            android:summary="@string/preference_summary_research_area"
            android:dialogTitle="@string/preference_dialog_research_area"
            android:defaultValue="@string/preference_default_value_research_area"
            android:inputType="number"/>
    </PreferenceCategory>

</PreferenceScreen>